--- a/style.css
+++ b/style.css
@@ -15,13 +15,15 @@ html, body{
 }
 
 #field{
-    display: flex;
+    margin-bottom: 1vh;
+    display: block;
     background-color: darkslategray;
     padding: 10px;
     padding-right: 5px;
     padding-bottom: 5px;
-    height: 100vh;
-    margin-block: 1.25vh;
+    height: 95vh;
+    max-height: 95vh;
+    max-width:95%
 }
 
 button{
